@@ -1,0 +1,10 @@
+package test.groups.issue182;
+
+import org.testng.annotations.Listeners;
+import org.testng.annotations.Test;
+
+@Test
+public abstract class ParentTest {
+  public void parentTestMethod() {
+  }
+}
