@@ -148,6 +148,7 @@
       <class name="test.ReturnValueTest" />
       <class name="test.groupbug.GroupBugTest" />
       <class name="test.groups.issue1834.IssueTest"/>
+      <class name="test.groups.issue182.IssueTest"/>
       <class name="test.parameters.ShadowTest" />
       <class name="test.parameters.ParameterOverrideTest" />
       <class name="test.parameters.ParameterInjectAndOptionTest" />
