@@ -1,4 +1,5 @@
 Current
+Fixed: GITHUB-182: Inherited test methods do not get expected group behavior (Krishnan Mahadevan)
 Fixed: GITHUB-1988: Add Automatic-Module-Name to MANIFEST.MF (Krishnan Mahadevan)
 Fixed: GITHUB-1985: Custom "IMethodSelector" implementation doesn't filter methods properly (Krishnan Mahadevan)
 Fixed: GITHUB-993:  Handle null test names from ITest implementation (Krishnan Mahadevan)
